--- a/linguagens_repos.ipynb
+++ b/linguagens_repos.ipynb
@@ -5345,11 +5345,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "access_token = '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'\n",
+    "access_token = #token da api\n",
     "headers = {'Authorization': f'Bearer {access_token}',\n",
     "           'X-Github-Api-Version': '2022-11-28',\n",
     "           'Accept': 'application/vnd.github+json'}"
